<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>fr.opensagres.xdocreport</groupId>
	<artifactId>xdocreport-parent</artifactId>
	<version>2.1.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<description>XDocReport means XML Document reporting. It's Java API to merge XML document created with MS Office (docx) or OpenOffice (odt), LibreOffice (odt) with a Java model to generate report and convert it if you need to another format (PDF, XHTML...).</description>
	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>7</version>
	</parent>
	<licenses>
		<license>
			<name>The MIT License (MIT)</name>
			<url>http://www.opensource.org/licenses/mit-license.php</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<properties>
		<osgi-version-qualifier>${maven.build.timestamp}</osgi-version-qualifier>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>
		<maven.compiler.release>17</maven.compiler.release>
	</properties>
	<build>
		<defaultGoal>install</defaultGoal>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>17</source>
					<target>17</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<forkMode>always</forkMode>
					<!-- It's better to use "target" folder as basedir for tests... -->
					<basedir>${project.build.directory}</basedir>
					<redirectTestOutputToFile>true</redirectTestOutputToFile>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<extensions>true</extensions>
				<executions>
					<execution>
						<id>bundle-manifest</id>
						<phase>process-classes</phase>
						<goals>
							<goal>manifest</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<!-- <unpackBundle>true</unpackBundle> -->
					<instructions>
						<_include>TEMPLATE.MF</_include>
						<_snapshot>${osgi-version-qualifier}</_snapshot>
						<_nouses>true</_nouses>
						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
						<Bundle-RequiredExecutionEnvironment>JavaSE-17</Bundle-RequiredExecutionEnvironment>
					</instructions>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-release-plugin</artifactId>
				<configuration>
					<preparationGoals>clean install -DskipTests</preparationGoals>
					<autoVersionSubmodules>true</autoVersionSubmodules>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.mycila.maven-license-plugin</groupId>
				<artifactId>maven-license-plugin</artifactId>
				<configuration>
					<basedir>${basedir}</basedir>
					<header>header.txt</header>
					<includes>
						<include>src/**</include>
						<include>**/test/**</include>
						<include>build.properties</include>
						<include>plugin.xml</include>
					</includes>
					<excludes>
						<exclude>target/**</exclude>
						<exclude>**/*.txt</exclude>
						<exclude>**/*.xml</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<configuration>
					<attach>true</attach>
				</configuration>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<reportPlugins>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-project-info-reports-plugin</artifactId>
							<version>2.2</version>
							<configuration>
								<dependencyDetailsEnabled>true</dependencyDetailsEnabled>
								<dependencyLocationsEnabled>true</dependencyLocationsEnabled>
							</configuration>
						</plugin>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-javadoc-plugin</artifactId>
							<version>2.9.1</version>
						</plugin>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-surefire-report-plugin</artifactId>
							<version>2.6</version>
						</plugin>
					</reportPlugins>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<additionalparam>-Xdoclint:none</additionalparam>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-jar-plugin</artifactId>
					<version>2.3.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-clean-plugin</artifactId>
					<version>2.5</version>
				</plugin>
				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>3.0.0</version>
				</plugin>
				<plugin>
					<groupId>com.mycila.maven-license-plugin</groupId>
					<artifactId>maven-license-plugin</artifactId>
					<version>1.9.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.14</version>
					<configuration>
						<argLine>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.net=ALL-UNNAMED</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.felix</groupId>
					<artifactId>maven-bundle-plugin</artifactId>
					<version>5.1.9</version>
				</plugin>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-release-plugin</artifactId>
					<version>2.5.3</version>
				</plugin>
				<plugin>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>2.4</version>
				</plugin>
				<plugin>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>2.22.2</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>cobertura-maven-plugin</artifactId>
					<version>2.7</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<developers>
		<developer>
			<id>angelozerr</id>
			<name>Angelo Zerr</name>
			<email>angelo.zerr@gmail.com</email>
			<roles>
				<role>architect</role>
				<role>developper</role>
			</roles>
			<timezone>+1</timezone>
		</developer>
		<developer>
			<id>pascalleclercq</id>
			<name>Pascal Leclercq</name>
			<email>pascal.leclercq@gmail.com</email>
			<roles>
				<role>developper</role>
			</roles>
			<timezone>+1</timezone>
		</developer>
		<developer>
			<id>aminebousta</id>
			<name>Amine Bousta</name>
			<email>abousta@gmail.com</email>
			<roles>
				<role>developper</role>
			</roles>
			<timezone>+1</timezone>
		</developer>
		<developer>
			<id>tiry</id>
			<name>Thierry Delprat</name>
			<email>tdelprat@nuxeo.com</email>
			<roles>
				<role>developper</role>
			</roles>
			<timezone>+1</timezone>
		</developer>
	</developers>
	<scm>
		<connection>scm:git:https://github.com/opensagres/xdocreport.git</connection>
		<developerConnection>scm:git:https://github.com/opensagres/xdocreport.git</developerConnection>
		<url>https://github.com/opensagres/xdocreport/</url>
		<tag>HEAD</tag>
	</scm>
	<modules>
		<module>thirdparties-extension</module>
		<module>core</module>
		<module>tools</module>
		<module>document</module>
		<module>template</module>
		<module>converter</module>
		<module>integrationtests</module>
		<module>sandbox</module>
		<module>remoting</module>
 		<!-- <module>gae</module> -->
		<module>uberjar</module>
	</modules>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>org.osgi.core</artifactId>
			<version>4.2.0</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/opensagres/xdocreport/issues</url>
	</issueManagement>
	<url>https://github.com/opensagres/xdocreport/</url>
	<name>XDocReport</name>
	<ciManagement>
		<system>Jenkins</system>
		<url>https://opensagres.ci.cloudbees.com/job/xdocreport/</url>
		<notifiers>
			<notifier>
				<address>pascal.leclercq@gmail.com</address>
			</notifier>
			<notifier>
				<address>angelo.zerr@gmail.com</address>
			</notifier>
			<notifier>
				<address>tdelprat@nuxeo.com</address>
			</notifier>
		</notifiers>
	</ciManagement>
	<profiles>
		<profile>
			<activation>
				<property>
					<name>m2e.version</name>
				</property>
			</activation>
			<properties>
				<osgi-version-qualifier>qualifier</osgi-version-qualifier>
			</properties>
			<build>
				<pluginManagement>
					<plugins>
						<plugin>
							<groupId>org.apache.felix</groupId>
							<artifactId>maven-bundle-plugin</artifactId>
							<configuration>
								<!-- PDE does not honour custom manifest location -->
								<manifestLocation>META-INF</manifestLocation>
							</configuration>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
	</profiles>
</project>
